# electronic-signing

./: .env.example  .gitignore  README.md  checks.sh  docker-compose.yml  initial-setup.sh  start-fullstack-dev-watch.sh  tests.sh
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/migrations/: 20240101000001_initial_schema.sql
backend/src/: lib.rs  main.rs
backend/src/api/: auth.rs  documents.rs  error.rs  middleware.rs  mod.rs  routes.rs  signing.rs  state.rs
backend/src/db/: audit.rs  document.rs  mod.rs  signature.rs  signer.rs  user.rs
backend/src/models/: audit.rs  document.rs  signature.rs  signer.rs  user.rs
backend/src/services/: admin.rs  audit.rs  config.rs  crypto.rs  email.rs  mod.rs  pdf.rs  signing.rs
backend/src/utils/: mod.rs
backend/tests/: integration_tests.rs
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/e2e/: auth.spec.ts  document-signing.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: DraggableField.tsx  Layout.tsx  PDFViewer.tsx  SignaturePad.tsx
frontend/src/pages/: DashboardPage.tsx  DocumentEditorPage.tsx  LoginPage.tsx  SigningPage.tsx
frontend/src/stores/: auth.ts  document.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.test.ts
scripts/: prepare-sqlx.sh  seed-demo-data.sh
