[package]
name = "signvault"
version = "0.1.0"
edition = "2021"
authors = ["SignVault Team"]
description = "Legally compliant electronic signature platform"

[lib]
name = "signvault"
path = "src/lib.rs"

[[bin]]
name = "signvault"
path = "src/main.rs"

[lints.rust]
dead_code = "allow"
unused_variables = "allow"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "limit"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# Cryptography
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }

# PDF processing
lopdf = "0.32"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Environment & config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# IP address handling
ipnetwork = "0.20"

[dev-dependencies]
# Testing
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
